# fastapi_data_analysis_api

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
data/: example.csv
