[project]
name = "fastapi-data-analysis-api"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "uvicorn[standard]>=0.37.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "python-multipart>=0.0.20",
]
